WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169045
Don't call libwebrtc functions if libwebrtc.dylib doesn't exist while testing
https://bugs.webkit.org/show_bug.cgi?id=169045
Summary
Don't call libwebrtc functions if libwebrtc.dylib doesn't exist while testing
Alex Christensen
Reported
2017-03-01 10:54:07 PST
Don't call libwebrtc functions if libwebrtc.dylib doesn't exist while testing
Attachments
Patch
(2.47 KB, patch)
2017-03-01 10:55 PST
,
Alex Christensen
youennf
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2017-03-01 10:55:10 PST
Created
attachment 303081
[details]
Patch
Alex Christensen
Comment 2
2017-03-01 11:33:00 PST
http://trac.webkit.org/r213234
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug