Don't call libwebrtc functions if libwebrtc.dylib doesn't exist while testing https://bugs.webkit.org/show_bug.cgi?id=169045 <rdar://problem/30735413>

Reviewed by Youenn Fablet.

WebRTC tests fail instead of crashing now if libwebrtc.dylib is missing.
All other tests pass instead of crashing immediately when creating an Internals object.

* Modules/mediastream/RTCController.cpp:
(WebCore::RTCController::disableICECandidateFiltering):
(WebCore::RTCController::enableICECandidateFiltering):
* Modules/mediastream/libwebrtc/LibWebRTCPeerConnectionBackend.cpp:
(WebCore::createLibWebRTCPeerConnectionBackend):
* testing/Internals.cpp:
(WebCore::Internals::enableMockMediaEndpoint):
(WebCore::Internals::emulateRTCPeerConnectionPlatformEvent):
(WebCore::Internals::useMockRTCPeerConnectionFactory):
* testing/Internals.h:



Canonical link: https://commits.webkit.org/186032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213234 268f45cc-cd09-0410-ab3c-d52691b4dbfc